Travis CI added (#1)
* .travis.yml file added in order to add Travis CI service

* .travis.yml file added in order to add Travis CI service

* Now we use java.util instead of sun.misc Base64 encoder/decoder

* Remove unused imports from WebConfig.java

* add javax.xml.bind dependency

Co-authored-by: Alan <adonoso@itba.edu.ar>